--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.373.0",
+    "mongoose": "^8.3.3",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
